# Ansible-wordpress

./: pyproject.toml  requirements.yml  wordpress.yml
.github/workflows/: main.yml
roles/bbatsche.MySQL/meta/: .galaxy_install_info
roles/geerlingguy.mysql/meta/: .galaxy_install_info
roles/wordpress/.ansible/roles/: francisco.wordpressql
roles/wordpress/defaults/: main.yml
roles/wordpress/handlers/: main.yml
roles/wordpress/meta/: main.yml
roles/wordpress/molecule/default/: converge.yml  verify.yml
roles/wordpress/tasks/: main.yml
roles/wordpress/templates/: apache-wp.conf.j2
roles/wordpress/tests/: test.yml
roles/wordpress/vars/: Debian.yml  RedHat.yml
