[tool.poetry]
name = "1- ansible"
version = "0.1.0"
description = ""
authors = ["Francisco Perez <francisco.perez@alu.ing.unlp.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "~11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
